name:                hwall-auth-iitk
version:             0.1.0.0
-- synopsis:
description:         Firewall Authentication script for IITK network in haskell.
license-file:        LICENSE
author:              satvikc
maintainer:          satvikc@iitk.ac.in
category:            Network
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

executable hwall-auth-iitk
  main-is:             Main.hs
  ghc-options:         -O2 -Wall -threaded
  Hs-source-dirs:      src
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <4.7,
                       bytestring,
                       haskeline,
                       http-conduit,
                       http-types,
                       mtl,
                       regex-compat >=0.95,
                       unix
  -- hs-source-dirs:
  default-language:    Haskell2010